Separated classes Subscription and News. Added subscription categories

--- a/Views/Home/News.cshtml
+++ b/Views/Home/News.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<RssReader.Models.Subscription>
+﻿@model IEnumerable<RssReader.Models.News>
 @{
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
@@ -7,15 +7,15 @@
 <div>
 
     <div class="card-columns">
-        @foreach (var subscription in Model)
+        @foreach (var news in Model)
         {
 
             <div class="card border-light shadow p-3 mb-5 bg-white rounded">
-                <img class="card-img-top" src="@subscription.ImgSrc" alt="Card image cap">
+                <img class="card-img-top" src="@news.ImgSrc" alt="Card image cap">
                 <div class="card-body">
-                    <h5 class="card-title"><a href="@subscription.Url">@subscription.Title</a></h5>
-                    <p class="card-text">@subscription.Discription</p>
-                    <p class="card-text text-right"><small class="text-muted">@{subscription.PubDate}</small></p>
+                    <h5 class="card-title"><a href="@news.Url">@news.Title</a></h5>
+                    <p class="card-text">@news.Discription</p>
+                    <p class="card-text text-right"><small class="text-muted">23423@{news.PubDate.ToShortTimeString();}</small></p>
 
                 </div>
 
