--- a/Views/Subscription/Add.cshtml
+++ b/Views/Subscription/Add.cshtml
@@ -20,6 +20,12 @@
                     @Html.TextBoxFor(model => model.Url, new { @class = "form-control", @id = "url", placeholder = "Введите Url" })
                 </div>
             </div>
+            <div class="form-group">
+                <label for="category">Категория</label>
+                <div>
+                    @Html.EnumDropDownListFor(model => model.Category, new { @class = "form-control", @id = "category", placeholder = "Выберите категорию" })
+                </div>
+            </div>
 
             <div>
                 <button type="submit" class="btn btn-success btn-block" role="button">Добавить</button>
