Removed all grids in the layout

--- a/Views/Home/News.cshtml
+++ b/Views/Home/News.cshtml
@@ -11,7 +11,7 @@
             @foreach (var news in subs)
             {
                 <div class="card border-light shadow p-3 mb-5 bg-white rounded">
-                    <img class="card-img-top" src="@news.ImgSrc" alt="Card image cap">
+                    <img class="card-img-top" src="@news.ImgSrc">
                     <div class="card-body">
                         <h5 class="card-title"><a href="@news.Url">@news.Title</a></h5>
                         <p class="card-text">@news.Discription</p>
