--- a/Views/Home/News.cshtml
+++ b/Views/Home/News.cshtml
@@ -10,7 +10,7 @@
         <div class="card-columns">
             @foreach (var news in subs)
             {
-                <div class="card border-light shadow p-3 mb-5 bg-white rounded">
+                <div class="card text-left border-light shadow p-3 mb-5 bg-white rounded">
                     <img class="card-img-top" src="@news.ImgSrc">
                     <div class="card-body">
                         <h5 class="card-title"><a href="@news.Url">@news.Title</a></h5>
