--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -17,7 +17,7 @@
 
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img src="https://img-23.ccm2.net/MV65OgizRQ6PF9idQneYYQVLyVc=/500x/23e40ded829244a8938d729a709df304/ccm-faq/freefire.jpg" class="d-block w-100" alt="...">
+                    <img src="..." class="d-block w-100" alt="...">
                 </div>
 
                 @foreach (var news in Model.FirstOrDefault().Skip(5).Take(5))
